--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -110,6 +110,8 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: flex-start;
 
   > li {
     margin-bottom: 20px;
@@ -138,15 +140,15 @@ label {
   .checkbox &,
   .radio & {
     cursor: pointer;
-    display: inline-block;
+    // display: inline-block;
     font-weight: normal;
     padding: 1px 12px 1px 30px;
-    position: relative;
+    // position: relative;
 
     input {
-      left: 0;
-      position: absolute;
-      top: 0;
+      // left: 0;
+      // position: absolute;
+      // top: 0;
     }
   }
 }
@@ -154,7 +156,7 @@ label {
 input {
   font-size: 16px;
   padding: 8px;
-  width: 100%;
+  // width: 100%;
 }
 
 select {
