--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,6 +1,6 @@
 // Colors
 $green  : #3aad91;
-$blue   : #2989c6;
+$blue   : #0067C5;
 $grey   : #414141;
 $orange : #fb6733;
 $red    : #d33847;
@@ -49,7 +49,7 @@ body {
 // Buttons
 
 .btn {
-  border-radius: 3px;
+  border-radius: 6px;
   border: none;
   color: #fff;
   cursor: pointer;
@@ -59,8 +59,10 @@ body {
 
   &.-default {
     background-color: #fff;
-    border: 1px solid #ddd;
-    color: $grey;
+    background: 0 0;
+    border: 1px solid $blue;
+    // border: 1px solid #ddd;
+    color: $blue;
 
     &:hover {
       background-color: #eee;
@@ -69,10 +71,10 @@ body {
 
   &.-primary {
     background-color: $blue;
-    border: 1px solid $blue;
+    // border: 1px solid $blue;
 
     &:hover {
-      background-color: darken($blue, 5%);
+      background-color: #002855 ;
     }
   }
 }
@@ -164,3 +166,17 @@ select {
   font-size: 16px;
   padding: 8px;
 }
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+a {
+  color: #0067C5;
+}
+
+p {
+  color: #007A33;
+}
+
